k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mission-deployment
  labels:
    app: mission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mission
  template:
    metadata:
      labels:
        app: mission
    spec:
      containers:
        - name: mission
          image: gayatri963/mission:v1
          ports:
            - containerPort: 8080
