k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mission-service
  labels:
    app: mission
spec:
  selector:
    app: mission
  ports:
    - protocol: TCP
      port: 8080       # Port exposed by the service
      targetPort: 8080 # Port exposed by the container
  type: ClusterIP
